fix scroll on mobile

--- a/scroll.css
+++ b/scroll.css
@@ -1,4 +1,4 @@
-/* styles.css */
+
 
 * {
     margin: 0;
@@ -12,7 +12,7 @@
 body,
 html {
     height: 100%;
-    overflow: hidden;
+    /* overflow: hidden; */
     --g-base-font-size: 4px;
     --g-text-body-1-font-size: 13px;
     --g-text-body-1-line-height: 18px;
@@ -86,6 +86,10 @@ html {
     --g-color-blue: #2c55e4;
 }
 
+html.no-scroll{
+    overflow: hidden;
+}
+
 
 a{
     text-decoration: none;
@@ -114,11 +118,6 @@ a{
 }
 
 .screen:nth-child(odd) {
-    /* background-color: #3498db; */
     color: white;
 }
 
-.screen:nth-child(even) {
-    /* background-color: #2ecc71; */
-    /* color: white; */
-}
